# pg_mcp

./: .env.example  AGENTS.md  Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/tools/: analyze.rs  execute_query.rs  execute_sql.rs  mod.rs  schema.rs
tests/: integration.rs
